fix : contact width spacing

--- a/styles/contact.css
+++ b/styles/contact.css
@@ -12,10 +12,10 @@
     flex-direction: column ;
     justify-content: space-evenly;
     align-items: flex-start;
-    width: 80vw;
+    width: 50vw;
     color: var(--text-color);
     padding: 4rem;
-    margin-left: 15rem;
+    margin-left: 10rem;
     
 }
 
